--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,23 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#9B77DC"
+    android:background="@drawable/rainbow_gradient_bg_lighter"
     android:clickable="true"
     android:onClick="onClick"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/startButton"
-        android:layout_width="220dp"
-        android:layout_height="179dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="427dp"
-        android:layout_marginEnd="83dp"
-        android:layout_marginBottom="256dp"
+        android:layout_width="198dp"
+        android:layout_height="62dp"
+        android:background="#FFFFFF"
         android:onClick="onClick"
         android:text="Get Started!"
+        android:textColor="#000000"
+        android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.651" />
+
+    <ImageView
+        android:id="@+id/chromaticLensLogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/startButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.698"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
 </androidx.constraintlayout.widget.ConstraintLayout>
