--- a/app/src/main/res/layout/screen2.xml
+++ b/app/src/main/res/layout/screen2.xml
@@ -79,14 +79,16 @@
 
         <ImageView
             android:id="@+id/chromaticLensLogoMainMenu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="199dp"
+            android:layout_height="168dp"
             android:contentDescription="TODO"
             app:layout_constraintBottom_toTopOf="@+id/captureButton"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_launcher_foreground"
+            app:layout_constraintVertical_bias="0.462"
+            app:srcCompat="@drawable/chroml_logo_transparent"
             tools:ignore="ImageContrastCheck" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
